# AgenticKVM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.md
.github/workflows/: ci.yml  pages.yml
.specify/memory/: constitution.md
docs/: act-clearance-client-review.md  act-clearance-client.md  approval-broker-v1-review.md  approval-notifiers.md  approval-queue.md  architecture.md  artifacts.md  audit-cli.md  audit-store.md  cli-smoke.md  cli.md  configuration.md  conformance-matrix.md  control-plane.md  conversational-approval.md  coverage-policy.md  credentials.md  development.md  donor-spike-inventory.md  github-pages-enablement-checklist.md  github-pages.md  heartbeat-log.md  heartbeat.md  interface-consistency.md  linting.md  live-provider-and-input-gates.md  live-provider-preflight.md  maintainer-runbook.md  mcp-elicitation.md  mcp-host-compatibility.md  mcp-live-server-acceptance.md  mcp-python-sdk-trial-review-decision.md  mcp-sdk-adapter-quickstart.md  mcp-sdk-adapter.md  mcp-sdk-candidate-matrix.md  mcp-sdk-dependency-review.md  mcp-stdio-mainline-decision.md  mcp-tools.md  migration-from-agentic-kvm.md  next-10-integration-review.md  (+37 more)
scripts/: build-package.py  check-package.py  check-public-beta.py  check-site.py  generate-release-manifest.py  lint-sanity.py  pikvm-live-validation.py  smoke-cli.py  type-sanity.py  validate-docs.py
site/: README.md  index.html  styles.css
(+329 files in other folders)
